# insdexer

./: .env  .gitignore  Cargo.toml  Cross.toml  README.md  log4rs.yaml
.github/workflows/: ci.yml
src/: adjust_open_files.rs  args.rs  config.rs  global.rs  lib.rs  log.rs  main.rs  plog.rs
src/api/: mod.rs  router_inscription.rs  router_market.rs  router_nft.rs  router_other.rs  router_token.rs  server.rs
src/ethereum/: event_log.rs  mod.rs  web3ex.rs
src/inscription/: db.rs  db_checkpoint.rs  db_txn.rs  db_txndb.rs  indexer.rs  inscribe_collection.rs  inscribe_context.rs  inscribe_json.rs  inscribe_token.rs  mod.rs  trait_json_value.rs  trait_tx.rs  types.rs  worker_inscribe.rs  worker_sync.rs
src/inscription/marketplace/: db.rs  inscribe_market.rs  market_abi.rs  mod.rs  types.rs
src/txn_db/: db.rs  mod.rs
