[package]
name = "insdexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
async-trait = "0.1.77"
base64 = "0.21.7"
clap = { version = "4.5.1", features = ["derive", "env"] }
ctrlc = "3.4.2"
dotenv = "0.15.0"
futures-util = "0.3.30"
hex = "0.4.3"
lazy_static = "1.4.0"
libc = "0.2.153"
log = "0.4.20"
log4rs = "1.3.0"
regex = "1.10.2"
reqwest = "0.11.24"
serde = "1.0.195"
serde_json = "1.0.111"
sha1 = "0.10.6"
web3 = "0.19.0"

[dependencies.rocksdb]
version = "0.21.0"
default-features = false
features = ["lz4"]

[dependencies.tokio]
version = "1.36.0"
features = ["full"]

